# swagger.json
@@ -58,6 +58,9 @@
       },
       "post": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -122,6 +125,9 @@
       },
       "put": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -171,6 +177,9 @@
       },
       "delete": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -198,6 +207,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -207,7 +219,7 @@
         ],
         "description": "Endpoint to add a Customer.",
         "produces": [
-          "application/xml"
+          "application/json"
         ],
         "parameters": [
           {
@@ -227,7 +239,9 @@
             "added customer": "customer"
           },
           "400": {
-            "description": "Bad Request"
+            "description": "Bad Request",
+            "message": "A new customer has been added to the database",
+            "added customer": "customer"
           },
           "401": {
             "description": "Unauthorized"
@@ -257,6 +271,9 @@
       },
       "put": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -309,6 +326,9 @@
       },
       "delete": {
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -373,9 +393,6 @@
           "type": "string",
           "example": "Front End Developer"
         }
-      },
-      "xml": {
-        "name": "Customer"
       }
     },
     "CreateCustomer": {
@@ -436,10 +453,7 @@
         "address",
         "phone",
         "occupation"
-      ],
-      "xml": {
-        "name": "CreateCustomer"
-      }
+      ]
     }
   }
 }
